# Hani_ImplementingTransformers

./: README.md
01/: Practical_1.ipynb
transformer/: .gitignore  DOCUMENTATION.md  PROJECT_STRUCTURE.md  pyproject.toml
transformer/02/: Practical_2.ipynb
transformer/05/: Practical_5.ipynb
transformer/06/: Practical_6.ipynb
transformer/practicals/: Practical_10.ipynb  Practical_11.ipynb  Practical_3.ipynb  Practical_4.ipynb  Practical_7.ipynb  Practical_8.ipynb  Practical_9.ipynb
transformer/results/: model0.txt  model1.txt  model2.txt  model3.txt
transformer/src/: data_utils.py  dataset.py  tokenizer.py
transformer/src/modelling/: __init__.py  attention.py  functional.py  loss.py  model.py  positional_encoding.py  scheduler.py  trainer.py
transformer/src/run/: generator.ipynb  inference_script.py  main.ipynb  main.py  train_script.py
transformer/src/run/wandb/: latest-run
transformer/src/run/wandb/run-20260127_144154-0zceeqd5/files/: requirements.txt  wandb-metadata.json
transformer/src/tokenizer_artifacts/: merges.txt  vocab.json
transformer/src/transformer/: __init__.py
transformer/src/transformer/modelling/: attention.py  loss.py  model.py
transformer/src/transformer/run/: __init__.py  main.py
transformer/tests/: practical_3_test1.py  practical_3_test2.py  practical_3_test3.py  practical_6.py  test_dataset.py  test_model.py
