[project]
name = "transformer"
version = "0.1.0"
description = ""
authors = [
    {name = "Hani",email = "Hani.Ouraghene@hhu.de"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch (>=2.9.0,<3.0.0)",
    "torchvision (>=0.24.0,<0.25.0)",
    "torchaudio (>=2.9.0,<3.0.0)",
    "datasets (>=4.2.0,<5.0.0)",
    "tokenizers (>=0.22.1,<0.23.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "transformer", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
